--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,10 @@
-/* You can add global styles to this file, and also import other style files */
+@import "./styles/theme.scss";
+
+html, body { height: 100%; box-sizing: border-box; }
+
+*, 
+*:before,
+*:after {
+    box-sizing: inherit;
+    margin: 0;
+}
