--- a/src/app/pages/home/components/banner/banner.component.html
+++ b/src/app/pages/home/components/banner/banner.component.html
@@ -1,1 +1,11 @@
-<p>banner works!</p>
+<section class="c-banner">
+    <div class="c-banner__img"></div>
+    <div class="c-banner__mask"></div>
+    <div class="c-banner__text-content">
+        <div class="c-banner-text">
+            <h3 class="c-banner-text__text">Fique por dentro</h3>
+            <h3 class="c-banner-text__text">das atualizações das</h3>
+            <h1 class="c-banner-text__text-focus">CARTAS do CBLOL</h1>
+        </div>
+    </div>
+</section>
