--- a/src/app/scss/_variables.scss
+++ b/src/app/scss/_variables.scss
@@ -22,3 +22,9 @@ $iphoneX: "(min-height: 800px)";
         display: none !important;
     }
 }
+
+@mixin flexCenter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
