--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,6 @@
 @import "./styles/theme.scss";
 
-html, body { height: 100%; box-sizing: border-box; }
+html, body { height: 100%; box-sizing: border-box; font-family: 'Audiowide'; }
 
 *, 
 *:before,
