--- a/src/app/pages/home/components/banner/banner.component.html
+++ b/src/app/pages/home/components/banner/banner.component.html
@@ -2,10 +2,9 @@
     <div class="c-banner__img"></div>
     <div class="c-banner__mask"></div>
     <div class="c-banner__text-content">
-        <div class="c-banner-text">
-            <h3 class="c-banner-text__text">Fique por dentro</h3>
-            <h3 class="c-banner-text__text">das atualizações das</h3>
-            <h1 class="c-banner-text__text-focus">CARTAS do CBLOL</h1>
+        <div class="c-banner-text mat-typography">
+            <h3 class="c-banner-text__text mat-h1">Fique por dentro <br> das atualizações das</h3>
+            <h1 class="c-banner-text__text-focus mat-h1">CARTAS do CBLOL</h1>
         </div>
     </div>
 </section>
