--- a/src/app/pages/home/components/banner/banner.component.scss
+++ b/src/app/pages/home/components/banner/banner.component.scss
@@ -1,16 +1,19 @@
-@import '../../../../scss/common.scss';
+@import '../../../../../styles/common.scss';
 
 .c-banner {
     position: relative;
     height: 250px;
     &__img {
         background: url('../../../../../assets/img/banner.png') center;
-        background-size: cover;
+        background-size: contain;
         background-repeat: repeat-x;
         height: 100%;
         width: 100%;
         filter: blur(1px);
         -webkit-filter: blur(1px);
+        @media #{$tablet}{
+            background-size: cover;
+        }
     }
     &__mask {
         top: 0;
@@ -18,11 +21,11 @@
         width: 100%;
         height: 100%;
         background: rgb(24,19,101);
-        background: linear-gradient(270deg, rgba(24, 19, 101, 0.9) 0%, rgba(82,57,251,0.4) 100%);
+        background: linear-gradient(270deg, rgba($primary-color, 0.9) 0%, rgba($blue, 0.4) 100%);
     }
     &__text-content {
         position: absolute;
-        color: white;
+        color: var(--text-primary-color);
         top: 0;
         width: 100%;
         height: 100%;
@@ -34,6 +37,7 @@
         .c-banner-text{
             &__text{
                 font-weight: 400;
+                margin: 0;
             }
         }
     }
