--- a/src/app/pages/home/components/banner/banner.component.html
+++ b/src/app/pages/home/components/banner/banner.component.html
@@ -5,6 +5,7 @@
         <div class="c-banner-text mat-typography">
             <h3 class="c-banner-text__text mat-h1">Fique por dentro <br> das atualizações das</h3>
             <h1 class="c-banner-text__text-focus mat-h1">CARTAS do CBLOL</h1>
+            <button mat-raised-button color="warn">VER CARTAS</button>
         </div>
     </div>
 </section>
