--- a/src/app/pages/home/components/banner/banner.component.scss
+++ b/src/app/pages/home/components/banner/banner.component.scss
@@ -52,6 +52,12 @@
                 @media #{$mobile}{
                     font-size: 24px;
                 }
+                &--highlight{
+                    color: $warn-color;
+                }
+            }
+            &__button{
+                align-self: center;
             }
         }
     }
