primary-gradient - create dream team component

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -12,3 +12,5 @@ $warn-darker-color: #d1fb00;
 
 $purple: #3c2775;
 $blue: #5239fb;
+
+$primary-gradient: radial-gradient(circle, $accent-color 0%, $primary-color 100%);
