--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,27 +1,27 @@
 <section class="c-footer mat-typography">
-    <div></div>
+    <img class="c-img" src="">
     <div class="c-middle">
         <h4 class="c-middle__text">Feito por <a class="c-middle__text--link" target="_blank" href="https://github.com/dream-team-code/ilha-das-lendas">DREAM TEAM CODE</a></h4>
-        <img class="c-middle__icon" src="./assets/img/github.jpg">
+        <a href="https://github.com/dream-team-code/ilha-das-lendas" target="_blank" rel="noopener noreferrer"><img class="c-middle__icon" src="./assets/img/github.jpg"></a>
     </div>
     <div class="c-end">
         <div class="c-island-data">
             <h4 class="c-island-data__title">Siga a <span class="c-island-data__title--highlight">ILHA DAS LENDAS</span> <br>em todas as redes sociais</h4>
             <div class="c-island-data__icons">
-                <img class="c-island-data__icon" src="./assets/img/instagram.png">
-                <img class="c-island-data__icon" src="./assets/img/youtube.png">
-                <img class="c-island-data__icon" src="./assets/img/twitter.png">
-                <img class="c-island-data__icon" src="./assets/img/tiktok.png">
-                <img class="c-island-data__icon" src="./assets/img/twitch.png">
+                <a href="https://www.instagram.com/ilhadaslendas/" target="_blank" rel="noopener noreferrer"><img class="c-island-data__icon" src="./assets/img/instagram.png"></a>
+                <a href="https://www.youtube.com/@ilhadaslendas" target="_blank"><img class="c-island-data__icon" src="./assets/img/youtube.png"></a>
+                <a href="https://twitter.com/ilhadaslendas" target="_blank" rel="noopener noreferrer"><img class="c-island-data__icon" src="./assets/img/twitter.png"></a>
+                <a href="https://www.tiktok.com/@ilhadaslendas" target="_blank" rel="noopener noreferrer"><img class="c-island-data__icon" src="./assets/img/tiktok.png"></a>
+                <a href="https://www.twitch.tv/team/soagradece" target="_blank"><img class="c-island-data__icon" src="./assets/img/twitch.png"></a>
             </div>
         </div>
         <mat-divider class="c-end__hr"></mat-divider>
         <div class="c-creators">
             <h4 class="c-creators__title">Criadores</h4>
             <div class="c-creators__icons">
-                <img class="c-creators__icon" src="https://avatars.githubusercontent.com/u/52005120?v=4">
-                <img class="c-creators__icon" src="https://avatars.githubusercontent.com/u/40872422?v=4">
-                <img class="c-creators__icon" src="https://avatars.githubusercontent.com/u/31376902?v=4">
+                <a href="https://github.com/Gusta-Alves" target="_blank" rel="noopener noreferrer"><img class="c-creators__icon" src="https://avatars.githubusercontent.com/u/52005120?v=4"></a>
+                <a href="https://github.com/J-Matioli" target="_blank" rel="noopener noreferrer"><img class="c-creators__icon" src="https://avatars.githubusercontent.com/u/40872422?v=4"></a>
+                <a href="https://github.com/HenriqueFickert" target="_blank" rel="noopener noreferrer"><img class="c-creators__icon" src="https://avatars.githubusercontent.com/u/31376902?v=4"></a>
             </div>
         </div>
     </div>
