adjust text middle

--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -23,6 +23,7 @@
         }
         &__text{
             color: var(--text-primary-color);
+            margin-bottom: 13px;
             &--link{
                 color: var(--text-primary-color);
             }
