--- a/src/app/pages/teams/components/row-table/row-table.component.html
+++ b/src/app/pages/teams/components/row-table/row-table.component.html
@@ -1,16 +1,21 @@
 <div class="c-row c-header" *ngIf="isHeader">
-    <h3>Posição</h3>
-    <h3>Nome</h3>
-    <h3>Overwall</h3>
+    <h3>Pos.</h3>
+    <h3 class="c-header__name">Nome</h3>
+    <h3>Nota</h3>
     <h3>Cartas</h3>
 </div>
-<mat-divider *ngIf="!isHeader"></mat-divider>
-<div class="c-row" *ngIf="!isHeader">
-    <h4>{{ teams.position }}</h4>
+<div class="c-row__divider-box">
+    <mat-divider class="c-row__divider" *ngIf="!isHeader && team"></mat-divider>
+</div>
+<div class="c-row c-content" *ngIf="!isHeader && team">
+    <h3>{{ team.position }}</h3>
     <div class="c-team">
-        <img class="c-team__img" [src]="'./assets/img/teams/' + teams.logo" alt="">
-        <h4>{{ teams.name }}</h4>
+        <img class="c-team__img" [src]="'./assets/img/teams/' + team.logo" alt="">
+        <h3 class="c-team__name">{{ team.name }}</h3>
     </div>
-    <h4>{{ teams.overwall }}</h4>
-    <button mat-raised-button color="warn">VER CARTAS</button>
+    <h3>{{ team.overwall }}</h3>
+    <!-- <button mat-raised-button color="warn">VER <mat-icon>filter_frames</mat-icon></button> -->
+    <button class="c-row__button" mat-mini-fab color="warn">
+        <mat-icon>keyboard_arrow_right</mat-icon>
+    </button>
 </div>
