--- a/src/app/pages/teams/components/table/table.component.html
+++ b/src/app/pages/teams/components/table/table.component.html
@@ -1,11 +1,4 @@
 <section class="c-table">
     <app-row-table [isHeader]="true"></app-row-table>
-    <app-row-table></app-row-table>
-    <app-row-table></app-row-table>
-    <app-row-table></app-row-table>
-    <app-row-table></app-row-table>
-    <app-row-table></app-row-table>
-    <app-row-table></app-row-table>
-    <app-row-table></app-row-table>
-    <app-row-table></app-row-table>
+    <app-row-table *ngFor="let team of teams" [team]="team"></app-row-table>
 </section>
