--- a/src/app/pages/teams/teams.component.scss
+++ b/src/app/pages/teams/teams.component.scss
@@ -4,6 +4,9 @@
     padding: 30px 15%;
     background: $primary-gradient;
     color: var(--text-primary-color);
+    @media #{$mobile}{
+        padding: 30px 2%;
+    }
     &__title{
         text-align: center;
     }
