--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,23 +10,37 @@ html, body { height: 100%; box-sizing: border-box; }
 }
 
 /* ===== Scrollbar CSS ===== */
-  /* Firefox */
-  * {
-    scrollbar-width: auto;
-    scrollbar-color: $accent-lighter-color $primary-color;
-  }
+/* Firefox */
+* {
+  scrollbar-width: auto;
+  scrollbar-color: $accent-lighter-color $primary-color;
+}
 
-  /* Chrome, Edge, and Safari */
-  *::-webkit-scrollbar {
-    width: 10px;
-  }
+::-moz-selection { /* Code for Firefox */
+  color: $primary-color;
+  background-color: $warn-color;
+}
 
-  *::-webkit-scrollbar-track {
-    background: $primary-color;
-  }
+::selection {
+    color: $primary-color;
+    background-color: $warn-color;
+}
 
-  *::-webkit-scrollbar-thumb {
-    background-color: $accent-lighter-color;
-    border-radius: 0px;
-    border: 0px none;
-  }
+::-webkit-scrollbar-thumb {
+    background-color: $warn-color;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: $primary-color;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: $accent-lighter-color;
+  border-radius: 0px;
+  border: 0px none;
+}
