--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -58,7 +58,7 @@
                 width: 40%;
             }
             @media #{$mobile}{
-                width: 80%;
+                width: 90%;
             }
             &__title{
                 color: var(--text-primary-color);
@@ -67,17 +67,21 @@
                 }
             }
             &__link{
-                width: 60%;
+                width: 100%;
+                display: grid;
+                align-items: center;
+                justify-content: center;
             }
             &__icons{
                 width: 100%;
                 display: grid;
-                grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+                grid-template-columns: 1fr 1fr 1fr 1fr;
                 align-items: center;
                 justify-items: center;
             }
             &__icon{
-                width: 100%;
+                width: 50px;
+                height: 50px;
                 cursor: pointer;
             }
         }
