feacture/router and scrollto - teams component

--- a/src/app/core/toolbar/toolbar.component.html
+++ b/src/app/core/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar color="primary" [class]="['c-toolbar', isTop && 'top']">
     <h2>ILHA DAS LENDAS</h2>
     <div class="c-toolbar__spacer"></div>
-    <button mat-raised-button [color]="isTop ? 'warn' : 'accent'">
+    <button mat-raised-button [color]="isTop ? 'warn' : 'accent'" [routerLink]="'/times'">
         CARTAS
-      </button>
+    </button>
 </mat-toolbar>
