--- a/src/app/pages/home/components/banner/banner.component.html
+++ b/src/app/pages/home/components/banner/banner.component.html
@@ -5,7 +5,7 @@
         <div class="c-banner-text mat-typography">
             <h3 class="c-banner-text__text mat-h1">Fique por dentro <br> das atualizações das</h3>
             <h1 class="c-banner-text__text-focus mat-h1"><span class="c-banner-text__text-focus--highlight">CARTAS</span> do CBLOL</h1>
-            <button class="c-banner-text__button" mat-raised-button color="warn">VER CARTAS</button>
+            <button class="c-banner-text__button" mat-raised-button color="warn" [routerLink]="'/times'">VER CARTAS</button>
         </div>
     </div>
 </section>
