--- a/src/app/pages/teams/teams.component.html
+++ b/src/app/pages/teams/teams.component.html
@@ -1,4 +1,4 @@
-<div class="c-teams mat-typography">
+<div class="c-teams mat-typography" #teams>
     <h1 class="c-teams__title">TIMES</h1>
     <app-table></app-table>
 </div>
