--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -33,7 +33,11 @@
         }
         &__icon{
             margin-left: 5px;
-            width: 40px;
+            width: 24px;
+            margin-bottom: 8px;
+            @media #{$xtablet}{
+                margin-bottom: 0;
+            }
         }
         @media #{$xtablet}{
             order: 2;
@@ -73,7 +77,7 @@
                 justify-content: center;
             }
             &__icons{
-                width: 100%;
+                width: 80%;
                 display: grid;
                 grid-template-columns: 1fr 1fr 1fr 1fr;
                 align-items: center;
