change style footer

--- a/src/app/core/footer/footer.component.scss
+++ b/src/app/core/footer/footer.component.scss
@@ -1,7 +1,7 @@
 @import '../../../styles/common.scss';
 
 .c-footer{
-    min-height: 200px;
+    min-height: 150px;
     background-color: $primary-color;
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
@@ -55,6 +55,7 @@
             align-items: center;
         }
         .c-island-data{
+            height: 100%;
             @include flexCenter;
             padding: 0 50px;
             flex-direction: column;
@@ -93,37 +94,48 @@
                 cursor: pointer;
             }
         }
-        .c-creators{
-            @include flexCenter;
-            flex-direction: column;
-            margin: 15px 0;
-            &__title{
-                color: var(--text-primary-color);
-            }
-            &__icons{
-                width: 40%;
-                display: grid;
-                grid-template-columns: 1fr 1fr 1fr;
-                align-items: center;
-                justify-items: center;
-                @media #{$xtablet}{
-                    width: 30%;
-                }
-                @media #{$mobile}{
-                    width: 40%;
-                }
-            }
-            &__link{
-                width: 60%;
-            }
-            &__icon{
-                width: 100%;
-                border-radius: 10px;
-            }
-        }
         &__hr{
             width: 70%;
             align-self: center;
         }
+    }
+}
+
+.c-creators{
+    
+    @include flexCenter;
+    align-items: flex-start;
+    justify-content: flex-end;
+    flex-direction: column;
+    margin: 15px 30px;
+    @media #{$xtablet}{
+        order: 2;
+        align-items: center;
+        justify-content: center;
+    }
+    &__title{
+        width: 40%;
+        text-align: center;
+        color: var(--text-primary-color);
+    }
+    &__icons{
+        width: 40%;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        align-items: center;
+        justify-items: center;
+        @media #{$xtablet}{
+            width: 30%;
+        }
+        @media #{$mobile}{
+            width: 40%;
+        }
+    }
+    &__link{
+        width: 60%;
+    }
+    &__icon{
+        width: 100%;
+        border-radius: 10px;
     }
 }
