--- a/src/app/pages/home/components/dream-team/dream-team.component.html
+++ b/src/app/pages/home/components/dream-team/dream-team.component.html
@@ -1,3 +1,8 @@
-<div class="c-dream-team">
-    
+<div class="c-dream-team mat-typography">
+
+    <h1 class="c-dream-team__title mat-h1">Dream Team</h1>
+
+    <div class="c-dream-team__list">
+        <app-card *ngFor="let card of [1, 2, 3, 4, 5, 6]"></app-card>
+    </div>
 </div>
