--- a/src/app/pages/home/components/dream-team/dream-team.component.scss
+++ b/src/app/pages/home/components/dream-team/dream-team.component.scss
@@ -9,10 +9,29 @@
     -ms-user-select: none; /* IE 10 and IE 11 */
     user-select: none; /* Standard syntax */
 
+    &__title-box{
+        @include flexCenter;
+    }
+
     &__title {
         color: var(--text-primary-color);
-        text-align: center;
+        // text-align: center;
         font-size: 34px;
+        position: relative;
+    }
+
+    &__badge{
+        margin-left: 5px;
+        position: absolute;
+        background-color: $warn-color;
+        color: $primary-color;
+        font-size: 14px;
+        width: 20px;
+        height: 20px;
+        line-height: 10px;
+        text-align: center;
+        border-radius: 20px;
+        padding-top: 5px;
     }
 
     &__list {
@@ -23,5 +42,13 @@
         column-gap: 27px;
         row-gap: 27px;
         flex-wrap: wrap;
+    }
+}
+
+::ng-deep{
+    .c-dream-team__tooltip{
+        background-color: $primary-darker-color;
+        font-family: 'Audiowide';
+        font-size: 16px;
     }
 }
