back button - shared

--- a/src/app/pages/teams/teams.component.html
+++ b/src/app/pages/teams/teams.component.html
@@ -1,4 +1,8 @@
 <div class="c-teams mat-typography" #teams>
-    <h1 class="c-teams__title">TIMES</h1>
-    <app-table></app-table>
+    <app-back-button></app-back-button>
+
+    <div class="c-teams__container">
+        <h1 class="c-teams__title">TIMES</h1>
+        <app-table></app-table>
+    </div>
 </div>
