--- a/src/app/pages/teams/teams.component.scss
+++ b/src/app/pages/teams/teams.component.scss
@@ -1,9 +1,11 @@
 @import '../../../styles/common.scss';
 
 .c-teams{
-    padding: 30px 15%;
     background: $primary-gradient;
     color: var(--text-primary-color);
+    &__container{
+        padding: 30px 15%;
+    }
     @media #{$mobile}{
         padding: 30px 2%;
     }
