Criando página das cartas

--- a/src/app/pages/home/components/dream-team/dream-team.component.scss
+++ b/src/app/pages/home/components/dream-team/dream-team.component.scss
@@ -43,6 +43,16 @@
         row-gap: 27px;
         flex-wrap: wrap;
     }
+
+    &__card {
+        width: 228px !important;
+        height: 350px !important;
+
+        @media screen and (max-width: 1000px) {
+            width: 185px !important;
+            height: 298px !important;
+        }
+    }
 }
 
 ::ng-deep{
