--- a/src/app/pages/teams/components/row-table/row-table.component.html
+++ b/src/app/pages/teams/components/row-table/row-table.component.html
@@ -16,6 +16,6 @@
     <h3>{{ team.overwall }}</h3>
     <!-- <button mat-raised-button color="warn">VER <mat-icon>filter_frames</mat-icon></button> -->
     <button class="c-row__button" mat-mini-fab color="warn">
-        <mat-icon>keyboard_arrow_right</mat-icon>
+        <mat-icon [routerLink]="'/cartas/' + team.id">keyboard_arrow_right</mat-icon>
     </button>
 </div>
