--- a/src/app/core/toolbar/toolbar.component.scss
+++ b/src/app/core/toolbar/toolbar.component.scss
@@ -3,6 +3,7 @@
     top: 0;
     z-index: 50;
     transition: background-color 0.5s ease;
+    z-index: 30;
     &__spacer{
         flex: 1 1 auto;
     }
