--- a/src/app/pages/home/components/dream-team/dream-team.component.html
+++ b/src/app/pages/home/components/dream-team/dream-team.component.html
@@ -15,6 +15,6 @@
     </div>
 
     <div class="c-dream-team__list">
-        <app-card *ngFor="let card of [1, 2, 3, 4, 5, 6]"></app-card>
+        <app-card class="c-dream-team__card" *ngFor="let card of [1, 2, 3, 4, 5, 6]"></app-card>
     </div>
 </div>
