--- a/src/app/shared/card/card.component.scss
+++ b/src/app/shared/card/card.component.scss
@@ -1,14 +1,9 @@
 .card {    
-    width: 228px;
-    height: 350px;
+    width: 100%;
+    height: 100%;
     position: relative;
     display: flex;
     align-items: center;
-
-    @media screen and (max-width: 980px) {
-        width: 206px;
-        height: 328px;
-    }
 
     &__player-img {
         max-width: 130%;
@@ -58,7 +53,7 @@
         top: 24%;
         left: 11%;    
 
-        @media screen and (max-width: 980px) {
+        @media screen and (max-width: 1000px) {
             font-size: 33px;
         }
     }
@@ -73,7 +68,7 @@
         left: 50%;
         transform: translateX(-50%);
 
-        @media screen and (max-width: 980px) {
+        @media screen and (max-width: 1000px) {
             font-size: 20px;
             bottom: 28%;
         }
@@ -88,7 +83,7 @@
         left: 50%;
         transform: translateX(-50%);
 
-        @media screen and (max-width: 980px) {
+        @media screen and (max-width: 1000px) {
             font-size: 12px;
             bottom: 21%;
         }
