Otimizando tamanho das imagens da home

--- a/src/app/pages/home/components/banner/banner.component.scss
+++ b/src/app/pages/home/components/banner/banner.component.scss
@@ -4,7 +4,7 @@
     position: relative;
     height: 250px;
     &__img {
-        background: url('../../../../../assets/img/banner.png') center;
+        background: url('../../../../../assets/img/banner.jpg') center;
         background-size: contain;
         background-repeat: repeat-x;
         height: 100%;
