--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -9,7 +9,7 @@
         height: 50vh;
     }
     &__img {
-        background: url('../../../assets/img/background.png') no-repeat center top;
+        background: url('../../../assets/img/background.jpg') no-repeat center top;
         width: 100%;
         height: 100%;
         background-size: cover;
