--- a/src/app/pages/cards/components/display-cards/display-cards.component.scss
+++ b/src/app/pages/cards/components/display-cards/display-cards.component.scss
@@ -76,7 +76,7 @@
         &--upper {
             transform: translateY(-200px) !important;
 
-            @media screen and (max-width: 785px) {
+            @media screen and (max-width: 683px) {
                 transform: unset !important;
             }
         }
@@ -93,6 +93,12 @@
         width: 188px;
         height: 290px;
         display: block;
+
+        @media screen and (max-width: 787px) {
+            width: 158px;
+            height: 250px;
+            display: block;
+        }
 
         &--coach {
             @media screen and (max-width: 512px) {
