--- a/src/app/pages/home/components/dream-team/dream-team.component.scss
+++ b/src/app/pages/home/components/dream-team/dream-team.component.scss
@@ -47,6 +47,11 @@
     &__card {
         width: 188px;
         height: 290px;
+
+        @media screen and (max-width: 787px) {
+            width: 158px;
+            height: 250px;
+        }
     }
 }
 
