back button - cards

--- a/src/app/pages/cards/cards.component.scss
+++ b/src/app/pages/cards/cards.component.scss
@@ -1,11 +1,13 @@
 @import '../../../styles/common.scss';
 
 .c-cards{
-    padding: 30px 15px;
     background: $primary-gradient;
     color: var(--text-primary-color);
-    @media #{$mobile}{
-        padding: 30px 2%;
+    &__container{
+        padding: 30px 15px;
+        @media #{$mobile}{
+            padding: 30px 2%;
+        }
     }
     &__title{
         text-align: center;
