--- a/src/app/pages/cards/cards.component.html
+++ b/src/app/pages/cards/cards.component.html
@@ -1,4 +1,7 @@
-<div class="c-cards mat-typography">
-    <h1 class="c-cards__title">cartas</h1>
-    <app-display-cards></app-display-cards>
+<div class="c-cards">
+    <app-back-button routePath="/times"></app-back-button>
+    <div class="c-cards__container mat-typography">
+        <h1 class="c-cards__title">cartas</h1>
+        <app-display-cards></app-display-cards>
+    </div>    
 </div>
