fix/font back button

--- a/src/app/pages/cards/cards.component.html
+++ b/src/app/pages/cards/cards.component.html
@@ -1,6 +1,6 @@
-<div class="c-cards">
+<div class="c-cards mat-typography">
     <app-back-button routePath="/times"></app-back-button>
-    <div class="c-cards__container mat-typography">
+    <div class="c-cards__container">
         <h1 class="c-cards__title">cartas</h1>
         <app-display-cards></app-display-cards>
     </div>    
