--- a/src/app/pages/cards/components/display-cards/display-cards.component.scss
+++ b/src/app/pages/cards/components/display-cards/display-cards.component.scss
@@ -7,6 +7,7 @@
     display: grid;
     grid-template-columns: 1fr;
     border: 1px solid $primary-lighter-color;
+    user-select: none;
 
     &__title-box {
         padding: 10px;
