--- a/src/app/pages/teams/components/row-table/row-table.component.html
+++ b/src/app/pages/teams/components/row-table/row-table.component.html
@@ -7,13 +7,14 @@
 <div class="c-row__divider-box">
     <mat-divider class="c-row__divider" *ngIf="!isHeader && team"></mat-divider>
 </div>
-<div class="c-row c-content" *ngIf="!isHeader && team" [routerLink]="'/cartas/' + team.id">
-    <h3>{{ team.position }}</h3>
+<div class="c-row c-content" *ngIf="!isHeader && team">
+    <h3>{{ position }}º</h3>
     <div class="c-team">
-        <img class="c-team__img" [src]="'./assets/img/teams/' + team.logo" alt="">
-        <h3 class="c-team__name">{{ team.name }}</h3>
+        <img class="c-team__img" [src]="'./assets/img/teams/' + team.caminhoRelativo" alt="">
+        <h3 class="c-team__name">{{ team.nome }}</h3>
     </div>
-    <h3>{{ team.overwall }}</h3>
+    <h3>{{ team.media }}</h3>
+    <!-- <button mat-raised-button color="warn">VER <mat-icon>filter_frames</mat-icon></button> -->
     <button class="c-row__button" mat-mini-fab color="warn">
         <mat-icon>keyboard_arrow_right</mat-icon>
     </button>
